syntax = "proto3";
package lattice.kv_store;

// Operation Types
message PutOp {
  bytes key = 1;
  bytes value = 2;
}

message DeleteOp {
  bytes key = 1;
}

message Operation {
    oneof op_type {
        PutOp put = 1;
        DeleteOp delete = 2;
    }
}

// KV Store Payload
message KvPayload {
  repeated Operation ops = 1;
}
